--- a/finpro.html
+++ b/finpro.html
@@ -38,20 +38,20 @@
 
                     // Define Ad Slots with consistent IDs
                     adSlot1 = googletag.defineSlot(
-                        '/23313593623/Native',
+                        '/23300646440/Native',
                         [[300, 250], [320, 480], [250, 250], [300, 100], 'fluid', [336, 280]],
                         'ad-slot-1'
                     ).addService(pubads);
 
                     adSlot2 = googletag.defineSlot(
-                        '/23313593623/Native',
+                        '/23300646440/Native',
                         [[300, 250], [320, 480], [250, 250], [300, 100], 'fluid', [336, 280]],
                         'ad-slot-2'
                     ).addService(pubads);
 
                     // Define anchor ad with proper ID
                     anchorSlot = googletag.defineOutOfPageSlot(
-                        '/23313593623/Native',
+                        '/23300646440/Native',
                         googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR
                     );
 
@@ -556,7 +556,7 @@
         window.googletag = window.googletag || { cmd: [] };
         var anchorSlot;
         googletag.cmd.push(function () {
-            anchorSlot = googletag.defineOutOfPageSlot('/23313593623/Anchor', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
+            anchorSlot = googletag.defineOutOfPageSlot('/23300646440/Anchortechgrowup', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
             if (anchorSlot) {
                 anchorSlot.addService(googletag.pubads());
             }
@@ -580,7 +580,7 @@
                     googletag.cmd.push(function () {
                         try {
                             const rewardedSlot = googletag
-                                .defineOutOfPageSlot('/23313593623/Anchor', googletag.enums.OutOfPageFormat.REWARDED)
+                                .defineOutOfPageSlot('/23300646440/Native', googletag.enums.OutOfPageFormat.REWARDED)
                                 .addService(googletag.pubads());
 
                             googletag.enableServices();
